<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/btn_listAddTitle"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:text="Add Vocabulary"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_first_lang"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="10dp"
        android:text="English"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_first_lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_listAddTitle" />

    <EditText
        android:id="@+id/et_first_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tv_second_lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_lang" />


    <TextView
        android:id="@+id/tv_second_lang"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginEnd="157dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="10dp"
        android:text="Finnish"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_second_lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_lang" />

    <EditText
        android:id="@+id/et_second_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tv_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_lang" />


    <TextView
        android:id="@+id/tv_tags"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginEnd="157dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="5dp"
        android:text="Tags"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_second_lang" />


    <EditText
        android:id="@+id/et_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/save_translation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tags" />

    <Button
        android:id="@+id/save_translation"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="128dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="8dp"
        android:text="Save Translation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tags" />

</android.support.constraint.ConstraintLayout>