<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearningListActivity">

    <ListView
        android:id="@+id/vocabList"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_words"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:clickable="true" />

    <TextView
        android:id="@+id/languageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="Language"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/input_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_alphabetical"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"

        android:hint="Search for tags (Comma separated)"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20dp" />
    <EditText
        android:id="@+id/input_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_tags"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"

        android:hint="Search for words"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_changeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/languageTitle"
        android:layout_marginTop="6dp"
        android:text="Change language"
        android:textSize="11dp" />

    <Button
        android:id="@+id/btn_alphabetical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_changeLanguage"
        android:layout_alignParentEnd="true"
        android:text="Alphabetical Sort"
        android:textSize="11dp" />

    <Button
        android:id="@+id/btn_tags_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_tags"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btn_alphabetical"
        android:text="Tag Sort"
        android:textSize="12dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_below="@+id/spinnerSort"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="2dp"
        android:entries="@array/spinnerItems" />

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:entries="@array/spinnerItemsSort" />


</RelativeLayout>